--- a/Enterprise.Web/Views/Home/Login.cshtml
+++ b/Enterprise.Web/Views/Home/Login.cshtml
@@ -9,14 +9,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>登录</title>
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/Login.css")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/common")
-
-    @Scripts.Render("~/Scripts/layer/layer.js")
-    @Scripts.Render("~/Scripts/json2.js")
+    <link rel="stylesheet" href="~/Content/Login.css"/>
+    <link rel="stylesheet" href="~/bundles/jquery/"/>
+    <link rel="stylesheet" href="~/bundles/jqueryval/"/>
+    
+    <script src="~/Scripts/layer/layer.js"></script>
+    <script src="~/Scripts/json2.js"></script>
 
     <script src="~/Scripts/MD5.js" type="text/javascript"></script>
 
