--- a/Enterprise.Web/Views/Settings/OrganizationalStructure.cshtml
+++ b/Enterprise.Web/Views/Settings/OrganizationalStructure.cshtml
@@ -9,8 +9,8 @@
     ViewBag.LeftMenu = "Organization";
 }
 
-@Styles.Render("~/Content/zTreeStyle/zTreeStyle.css")
-@Scripts.Render("~/Scripts/ztree/jquery.ztree.all-3.5.min.js")
+<link rel="stylesheet" href="~/Content/zTreeStyle/zTreeStyle.css"/>
+<script src="~/Scripts/ztree/jquery.ztree.all-3.5.min.js"></script>
 
 <style type="text/css">
     .ztree li span.button.switch.level0 {
