--- a/Enterprise.Web/App_Code/Helpers.cshtml
+++ b/Enterprise.Web/App_Code/Helpers.cshtml
@@ -1,11 +1,11 @@
 ﻿@using System.Web.WebPages;
 
-@*@helper HelperName(string name) {
+@helper HelperName(string name) {
     // 你的帮助程序可以包含代码和/或标记，例如
     // var msg = "你好 " + name;
     // <p>@msg</p>
     // 有关详细信息，请访问 http://go.microsoft.com/fwlink/?LinkID=204658
-    }*@
+    }
 
 
     @functions{
