解决编译报错问题
编译报错源自于 Asp.Net 和 Asp.Net Core 的差异，Razor 中的 @helper 在 asp.net core 3.1 尚未实现

--- a/Enterprise.Web/Views/Settings/Role.cshtml
+++ b/Enterprise.Web/Views/Settings/Role.cshtml
@@ -863,7 +863,7 @@
             @*<input name="btnAddUesrToRole" type="button" class="btn_blue" id="btnAddUesrToRole" value="添加" />*@
 
             @*<div style="float:left">
-                @Helpers.PersonSelector("staffSelector", null, null, ViewBag.Domain.Id, ViewBag.Domain.Name)
+                @PersonSelector("staffSelector", null, null, ViewBag.Domain.Id, ViewBag.Domain.Name)
             </div>
             <div style="float:left;margin-left:10px;height:32px; line-height:32px;">
                 <input name="btnAddUesrToRole" type="button" class="btn_blue" id="btnAddUesrToRole" value="添加" onclick="addUserToRole()" />
