--- a/Enterprise.Web/Views/Settings/User.cshtml
+++ b/Enterprise.Web/Views/Settings/User.cshtml
@@ -9,8 +9,9 @@
     ViewBag.LeftMenu = "User";
 }
 
-@Styles.Render("~/Content/zTreeStyle/zTreeStyle.css")
-@Scripts.Render("~/Scripts/ztree/jquery.ztree.core-3.5.min.js")
+<link rel="stylesheet" href="~/Content/zTreeStyle/zTreeStyle.css" />
+
+<script src="~/Scripts/ztree/jquery.ztree.core-3.5.min.js"></script>
 
 <style type="text/css">
     .ztree li span.button.switch.level0 {
@@ -252,7 +253,7 @@
             });
         });
     }
-    
+
     function getSelectedNode() {
         var nodes = _treeObj.getSelectedNodes();
         if (nodes.length != 1)
@@ -291,7 +292,7 @@
                 {{d[i].JobLevelName}}
                 {{# } }}
             </td>
-           
+
         </tr>
 
         {{# } }}
@@ -370,9 +371,9 @@
 
             </div>
 
-           
 
-           
+
+
         </div>
 
 
