--- a/Enterprise.Web/Views/Settings/UserDetail.cshtml
+++ b/Enterprise.Web/Views/Settings/UserDetail.cshtml
@@ -268,7 +268,7 @@
                 <tr>
                     <td height="50">部门：</td>
                     <td>
-                        @Helpers.OrganizationSelector("organizationSelector", null, null, ViewBag.RootOrganization.Id, ViewBag.RootOrganization.Name)
+                        @CustomerHelpers.OrganizationSelector("organizationSelector", null, null, ViewBag.RootOrganization.Id, ViewBag.RootOrganization.Name)
                     </td>
                 </tr>
                 <tr>
