--- a/Enterprise.Web/Views/Shared/_LayoutSimple.cshtml
+++ b/Enterprise.Web/Views/Shared/_LayoutSimple.cshtml
@@ -3,19 +3,19 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/common")
-    @Scripts.Render("~/Scripts/layer/layer.js")
-    @Scripts.Render("~/Scripts/json2.js")
+    <link rel="stylesheet" href="~/Content/css" />
+    <script src="~/bundles/jquery"></script>
+    <script src="~/bundles/jqueryval"></script>
+    <script src="~/bundles/common"></script>
+    <script src="~/Scripts/layer/layer.js"></script>
+    <script src="~/Scripts/json2.js"></script>
 </head>
 <body>
     <div id="divTopBar">
         <table id="tableTopBar" width="98%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td width="30">&nbsp;</td>
-                <td class="font_drakblue_18">升讯威周报与绩效考核平台</td>
+                <td class="font_drakblue_18">周报与绩效考核平台</td>
                 <td>&nbsp;</td>
             </tr>
         </table>
