--- a/Enterprise.Web/Views/WeeklyReport/Check.cshtml
+++ b/Enterprise.Web/Views/WeeklyReport/Check.cshtml
@@ -190,7 +190,7 @@
 </script>
 
 <div style="margin-right:20px; margin-bottom:20px;">
-    @Helpers.TitleWithDate("考核", this.ViewBag)
+    @CustomerHelpers.TitleWithDate("考核", this.ViewBag)
     <div style="height:50px;background:#D8E6ED; margin-top:20px;">
         <div style="float:left; margin-left:20px; margin-right:20px">
             <table border="0" cellspacing="0" cellpadding="0" height="50">
