--- a/Enterprise.Web/Views/Shared/_LayoutSimpleWithMainMenu.cshtml
+++ b/Enterprise.Web/Views/Shared/_LayoutSimpleWithMainMenu.cshtml
@@ -3,12 +3,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/common")
-    @Scripts.Render("~/Scripts/layer/layer.js")
-    @Scripts.Render("~/Scripts/json2.js")
+    <link rel="stylesheet" href="~/Content/css" />
+    <script src="~/bundles/jquery"></script>
+    <script src="~/bundles/jqueryval"></script>
+    <script src="~/bundles/common"></script>
+    <script src="~/Scripts/layer/layer.js"></script>
+    <script src="~/Scripts/json2.js"></script>
 </head>
 <body>
     <div id="divTopBar">
