--- a/Enterprise.Web/Views/Unity/MultiplePersonSelector.cshtml
+++ b/Enterprise.Web/Views/Unity/MultiplePersonSelector.cshtml
@@ -3,8 +3,8 @@
     Layout = "~/Views/Shared/_LayoutBasal.cshtml";
 }
 
-@Styles.Render("~/Content/zTreeStyle/zTreeStyle.css")
-@Scripts.Render("~/Scripts/ztree/jquery.ztree.core-3.5.min.js")
+<link rel="stylesheet" href="~/Content/zTreeStyle/zTreeStyle.css" />
+<script src="~/Scripts/ztree/jquery.ztree.core-3.5.min.js"></script>
 
 
 <style type="text/css">
