--- a/Enterprise.Web/Views/Unity/OrganizationSelector.cshtml
+++ b/Enterprise.Web/Views/Unity/OrganizationSelector.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_LayoutBasal.cshtml";
 }
 
-@Styles.Render("~/Content/zTreeStyle/zTreeStyle.css")
-@Scripts.Render("~/Scripts/ztree/jquery.ztree.core-3.5.min.js")
+<link rel="stylesheet" href="~/Content/zTreeStyle/zTreeStyle.css" />
+<script src="~/Scripts/ztree/jquery.ztree.core-3.5.min.js"></script>
 
 <style type="text/css">
     .ztree li span.button.switch.level0 {
