--- a/Enterprise.Web/Views/WeeklyReport/Post.cshtml
+++ b/Enterprise.Web/Views/WeeklyReport/Post.cshtml
@@ -477,7 +477,7 @@
 
 </script>
 
-@Helpers.TitleWithDate("填写", this.ViewBag)
+@CustomerHelpers.TitleWithDate("填写", this.ViewBag)
 <div style="margin-top: 20px; height: 50px; background: #D8E6ED">
     <div style="float: left; margin-left: 20px; margin-right: 20px">
         <table border="0" cellspacing="0" cellpadding="0" height="50">
