--- a/Enterprise.Web/Views/WeeklyReport/SearchByWorkType.cshtml
+++ b/Enterprise.Web/Views/WeeklyReport/SearchByWorkType.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Enterprise.Web.Models.SearchByWorkTypeViewModel
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 
 @{
     ViewBag.Title = "查询";
@@ -64,7 +66,7 @@
         });
 
         $(".weeklyReportItem").change(function () {
-            
+
             var checkedCount = 0;
             $(".weeklyReportItem").each(function (index, element) {
                 if ($(element).is(':checked')) {
@@ -181,14 +183,14 @@
 </script>
 
 <div style="margin-right:20px;margin-bottom:20px;">
-    @Helpers.TitleWithDate("查询", this.ViewBag)
+    @CustomerHelpers.TitleWithDate("查询", this.ViewBag)
     <div style="margin-top:20px">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td class="td_ContentTab">
                     @Html.ActionLink("按个人", "SearchByPersonal", "WeeklyReport", null, new { @class = "a_black_16" })
                 </td>
-                @if (AuthorizationHelper.Verify("WeeklyReport_SearchByOrganization", HttpContext.Current))
+                @if (AuthorizationHelper.Verify("WeeklyReport_SearchByOrganization", HttpContextAccessor.HttpContext))
                 {
                     <td class="td_ContentTab">
                         @Html.ActionLink("按组织架构", "SearchByOrganization", "WeeklyReport", null, new { @class = "a_black_16" })
@@ -208,7 +210,7 @@
                 组织架构：
             </div>
             <div style="float:left; margin-left:20px;">
-                @Helpers.OrganizationSelector("organizationSelector", null, null, ViewBag.Domain.Id, ViewBag.Domain.Name)
+                @OrganizationSelector("organizationSelector", null, null, ViewBag.Domain.Id, ViewBag.Domain.Name)
             </div>*@
         <div style="float:left; line-height:32px;">
             项目：
@@ -253,7 +255,7 @@
                     </td>
                     <td>
                         <select id="selectMonth" class="input_18">
-                          
+
                             @if (Model.Year == DateTime.Now.Year)
                             {
                                 for (int i = 1; i < 12; i++)
@@ -343,7 +345,7 @@
 
             <div style="margin-top:20px;">
                 <div>
-                     <div>
+                    <div>
                         <div class="font_darkBlue_22" style="float:left">
                             @weeklyReport.UserName  <span class="font_blue_18">- @weeklyReport.OrganizationName</span>
                         </div>
@@ -376,7 +378,8 @@
                                     <td class="tdSearchWeeklyReportItem">@item.WorkTaskName</td>
                                     <td class="tdSearchWeeklyReportItem">@Html.Raw(item.Content)</td>
                                     <td class="tdSearchWeeklyReportItem">@item.StatusName</td>
-                                    <td class="tdSearchWeeklyReportItem">@if (item.Date.HasValue) {@item.Date.Value.ToString("yyyy-MM-dd") }</td>
+                                    <td class="tdSearchWeeklyReportItem">@if (item.Date.HasValue)
+                                    {@item.Date.Value.ToString("yyyy-MM-dd")}</td>
                                     <td class="tdSearchWeeklyReportItem">@*@Html.Raw(item.Remark)*@</td>
                                     @*<td class="tdSearchWeeklyReportItem">@item.Time</td>*@
                                 </tr>
@@ -391,33 +394,33 @@
                                         <td>已阅</td>
                                     </tr>
                                     @*<tr>
-                                        <td valign="top">
-                                            <div>
-                                                @foreach (var item in weeklyReport.CheckPointList)
-                                                {
-                                                    <div style="float:left; line-height:34px;margin-right:20px;">
-                                                        @item.CheckPointName：@item.CheckPointItemName（@item.Score）
-                                                    </div>
-                                                }
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    @if (String.IsNullOrEmpty(weeklyReport.CheckRemark) == false)
-                                    {
-                                        <tr>
-                                            <td valign="bottom" height="10"></td>
-                                        </tr>
-                                        <tr>
                                             <td valign="top">
-                                                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                                    <tr>
-                                                        <td width="100">审核意见：</td>
-                                                        <td>@weeklyReport.CheckRemark</td>
-                                                    </tr>
-                                                </table>
+                                                <div>
+                                                    @foreach (var item in weeklyReport.CheckPointList)
+                                                    {
+                                                        <div style="float:left; line-height:34px;margin-right:20px;">
+                                                            @item.CheckPointName：@item.CheckPointItemName（@item.Score）
+                                                        </div>
+                                                    }
+                                                </div>
                                             </td>
                                         </tr>
-                                    }*@
+                                        @if (String.IsNullOrEmpty(weeklyReport.CheckRemark) == false)
+                                        {
+                                            <tr>
+                                                <td valign="bottom" height="10"></td>
+                                            </tr>
+                                            <tr>
+                                                <td valign="top">
+                                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                                        <tr>
+                                                            <td width="100">审核意见：</td>
+                                                            <td>@weeklyReport.CheckRemark</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        }*@
                                 </table>
                             </div>
                         }
