--- a/Sheng.Enterprise.Web/Views/Shared/_LayoutSimple.cshtml
+++ b/Sheng.Enterprise.Web/Views/Shared/_LayoutSimple.cshtml
@@ -15,7 +15,7 @@
         <table id="tableTopBar" width="98%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td width="30">&nbsp;</td>
-                <td class="font_drakblue_18">升讯威周报与绩效考核平台</td>
+                <td class="font_drakblue_18">周报与绩效考核平台</td>
                 <td>&nbsp;</td>
             </tr>
         </table>
