--- a/Enterprise.Web/Views/Home/Introduction.cshtml
+++ b/Enterprise.Web/Views/Home/Introduction.cshtml
@@ -33,7 +33,7 @@
                         </p>
 
                         <p style="margin-top:50px;">
-                            欢迎使用升讯威周报与绩效考核系统。<br />
+                            欢迎使用周报与绩效考核系统。<br />
                         </p>
                         <p>
                             <br />
