成功访问登录界面
.Net Core

--- a/Enterprise.Web/Views/Shared/_Layout.cshtml
+++ b/Enterprise.Web/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/Content/css" />
-    <script src="~/bundles/jquery"></script>
-    <script src="~/bundles/jqueryval"></script>
-    <script src="~/bundles/common"></script>
+    <link rel="stylesheet" href="~/Content/css.css" />
+    <script src="~/bundles/jquery.js"></script>
+    <script src="~/bundles/jqueryval.js"></script>
+    <script src="~/bundles/common.js"></script>
 
     <script src="~/Scripts/layer/layer.js"></script>
     <script src="~/Scripts/laytpl.js"></script>
