--- a/Enterprise.Web/Views/Home/Login.cshtml
+++ b/Enterprise.Web/Views/Home/Login.cshtml
@@ -9,10 +9,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>登录</title>
-    <link rel="stylesheet" href="~/Content/Login.css"/>
-    <link rel="stylesheet" href="~/bundles/jquery/"/>
-    <link rel="stylesheet" href="~/bundles/jqueryval/"/>
-    
+    <link rel="stylesheet" href="~/Content/Login.css" />
+    <script src="~/bundles/jquery.js"></script>
+    <script src="~/bundles/jqueryval.js"></script>
+    <script src="~/bundles/common.js"></script>
+
     <script src="~/Scripts/layer/layer.js"></script>
     <script src="~/Scripts/json2.js"></script>
 
@@ -20,96 +21,85 @@
 
     <script type="text/javascript">
 
-        $(document).ready(function ()
-        {
+        $(document).ready(function () {
             var account = getCookie("account");
-            if(account!= undefined && account!= ""){
+            if (account != undefined && account != "") {
                 $("#txtAccount").val(account);
-                $("#chkRememberAccount").attr("checked","checked");
+                $("#chkRememberAccount").attr("checked", "checked");
             }
 
-            $("[keyenter]").keypress(function (e)
-            {
-                if (e.keyCode === 13)
-                {
+            $("[keyenter]").keypress(function (e) {
+                if (e.keyCode === 13) {
                     login();
                 }
             });
-       });
-
-    function showMask()
-    {
-        $("#divLoginAreaMask").show();
-        $("#divLoginAreaMaskContent").show();
-    }
-
-    function hideMask()
-    {
-        $("#divLoginAreaMask").hide();
-        $("#divLoginAreaMaskContent").hide();
-    }
-
-    function login()
-    {        
-        //$("#form1").validate().element($("#salary"))
-
-       if ($("#formLogin").validate({
-            rules: {
-                     "txtAccount": "required",
-                     "txtPassword": "required"
-        },
-            messages: {
-                     "txtAccount": "!",
-                     "txtPassword": "!"
-        }
-        }).form() == false)
-            return;
-
-        //var password = hex_md5($("#txtPassword").val());
-        //alert(password.toUpperCase());
-
-        var args = new Object();
-        args.Account = $("#txtAccount").val();
-        args.Password = hex_md5($("#txtPassword").val()).toUpperCase();
-
-        showMask();
-
-        $.ajax({
-            url: "/Api/UserContext/Login",
-            type: "POST",
-            dataType: "json",
-            data: JSON.stringify(args),
-            success: function (data, status, jqXHR)
-            {
-                if (data.Success)
-                {
-                    //如果成功，不隐藏mask，否则跳转期间页面还可操作
-
-                    if($("#chkRememberAccount").is(":checked"))
-                    {
-                        setCookie("account",args.Account);
-                    }
-                    else{
-                        removeCookie("account");
-                    }
-
-                    window.location.href = "/WeeklyReport/Post";
-                } else
-                {
-                    hideMask();
-
-                    layerAlert(data.Message,function(){$("#txtPassword").focus();});
-                }
-            },
-            error: function (xmlHttpRequest)
-            {
-                //layer.closeAll();
-                //hideMask();
-
-                alert("Error: " + xmlHttpRequest.status);
-            }
         });
-    }
+
+        function showMask() {
+            $("#divLoginAreaMask").show();
+            $("#divLoginAreaMaskContent").show();
+        }
+
+        function hideMask() {
+            $("#divLoginAreaMask").hide();
+            $("#divLoginAreaMaskContent").hide();
+        }
+
+        function login() {
+            //$("#form1").validate().element($("#salary"))
+
+            if ($("#formLogin").validate({
+                rules: {
+                    "txtAccount": "required",
+                    "txtPassword": "required"
+                },
+                messages: {
+                    "txtAccount": "!",
+                    "txtPassword": "!"
+                }
+            }).form() == false)
+                return;
+
+            //var password = hex_md5($("#txtPassword").val());
+            //alert(password.toUpperCase());
+
+            var args = new Object();
+            args.Account = $("#txtAccount").val();
+            args.Password = hex_md5($("#txtPassword").val()).toUpperCase();
+
+            showMask();
+
+            $.ajax({
+                url: "/Api/UserContext/Login",
+                type: "POST",
+                dataType: "json",
+                data: JSON.stringify(args),
+                success: function (data, status, jqXHR) {
+                    if (data.Success) {
+                        //如果成功，不隐藏mask，否则跳转期间页面还可操作
+
+                        if ($("#chkRememberAccount").is(":checked")) {
+                            setCookie("account", args.Account);
+                        }
+                        else {
+                            removeCookie("account");
+                        }
+
+                        window.location.href = "/WeeklyReport/Post";
+                    } else {
+                        hideMask();
+
+                        layerAlert(data.Message, function () { $("#txtPassword").focus(); });
+                    }
+                },
+                error: function (xmlHttpRequest) {
+                    //layer.closeAll();
+                    //hideMask();
+
+                    alert("Error: " + xmlHttpRequest.status);
+                }
+            });
+        }
     </script>
 </head>
 <body>
