--- a/Enterprise.Web/Views/Shared/_LayoutSimple.cshtml
+++ b/Enterprise.Web/Views/Shared/_LayoutSimple.cshtml
@@ -3,10 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/Content/css" />
-    <script src="~/bundles/jquery"></script>
-    <script src="~/bundles/jqueryval"></script>
-    <script src="~/bundles/common"></script>
+    <link rel="stylesheet" href="~/Content/css.css" />
+    <script src="~/bundles/jquery.js"></script>
+    <script src="~/bundles/jqueryval.js"></script>
+    <script src="~/bundles/common.js"></script>
     <script src="~/Scripts/layer/layer.js"></script>
     <script src="~/Scripts/json2.js"></script>
 </head>
