await Html.PartialAsync
Html.Partial -> await Html.PartialAsync

--- a/Enterprise.Web/Views/Settings/JobLevel.cshtml
+++ b/Enterprise.Web/Views/Settings/JobLevel.cshtml
@@ -291,7 +291,7 @@
     <div id="divContainerTitle">基础数据</div>
 
     <div style=" position:absolute; top:70px; bottom:0px;left:20px;width:200px; OVERFLOW :auto; ">
-        @Html.Partial("_BasalDataMenu")
+        @await Html.PartialAsync("_BasalDataMenu")
     </div>
 
     <div style=" position:absolute; top:70px; bottom:10px;left:220px;width:1px; background-color:#D4D4D4">
