--- a/Enterprise.Web/Views/Settings/WorkStatus.cshtml
+++ b/Enterprise.Web/Views/Settings/WorkStatus.cshtml
@@ -264,7 +264,7 @@
     <div id="divContainerTitle">周报</div>
 
     <div style="position:absolute; top:70px; bottom:0px;left:20px;width:200px; OVERFLOW :auto; ">
-        @Html.Partial("_WeeklyReportMenu")
+        @await Html.PartialAsync("_WeeklyReportMenu")
     </div>
 
     <div style=" position:absolute; top:70px; bottom:10px;left:220px;width:1px; background-color:#D4D4D4">
