--- a/Enterprise.Web/Views/Shared/_Layout.cshtml
+++ b/Enterprise.Web/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                 </span>
             </div>
             <div>
-                @Html.Partial("_LeftMenu")
+                @await Html.PartialAsync("_LeftMenu")
             </div>
         </div>
         <div id="divContentWrapper">
